PEH-10869 Fixed - Profile icon aligned in Android

--- a/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
+++ b/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
@@ -173,7 +173,7 @@
         position: relative !important;
     }
     .logo-container-pp {
-        margin: 0 0 0 55px !important;
+        margin: 0 0 0 42px !important;
     }
 }
 
